--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3880,8 +3880,8 @@ body {
   margin-bottom: 0;
 }
 .cid-qHhIyOY40L {
-  padding-top: 60px;
-  padding-bottom: 0px;
+  padding-top: 75px;
+  padding-bottom: 60px;
   background-color: #efefef;
 }
 @media (min-width: 992px) {
@@ -3907,8 +3907,8 @@ body {
   color: #000000;
 }
 .cid-qHhZRVgtJh {
-  padding-top: 60px;
-  padding-bottom: 0px;
+  padding-top: 75px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
 .cid-qHhZRVgtJh .media-container-row {
@@ -3939,8 +3939,8 @@ body {
   color: #000000;
 }
 .cid-qHi98gn6pa {
-  padding-top: 60px;
-  padding-bottom: 0px;
+  padding-top: 75px;
+  padding-bottom: 60px;
   background-color: #efefef;
 }
 @media (min-width: 992px) {
@@ -3966,8 +3966,8 @@ body {
   color: #000000;
 }
 .cid-qHik8X6zOf {
-  padding-top: 60px;
-  padding-bottom: 0px;
+  padding-top: 75px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
 .cid-qHik8X6zOf .media-container-row {
@@ -3997,77 +3997,97 @@ body {
 .cid-qHik8X6zOf .mbr-section-btn {
   color: #232323;
 }
-.cid-qHhDAOBrGC {
+.cid-qHWBeFg2VL {
   padding-top: 75px;
-  padding-bottom: 0px;
-  background-color: #efefef;
-}
-.cid-qHhDAOBrGC H2 {
-  color: #154c81;
-}
-.cid-qHhDBHlQ1W {
-  padding-top: 30px;
   padding-bottom: 60px;
   background-color: #efefef;
 }
-.cid-qHhDBHlQ1W .mbr-slider .carousel-control {
-  background: #1b1b1b;
+.cid-qHWBeFg2VL .mbr-section-subtitle {
+  color: #232323;
+  font-weight: 300;
 }
-.cid-qHhDBHlQ1W .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
+.cid-qHWBeFg2VL .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+  align-items: stretch;
+  -webkit-align-items: stretch;
 }
-.cid-qHhDBHlQ1W .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-qHhDBHlQ1W .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-qHhDBHlQ1W .mbr-gallery-item > div::before {
-  content: '';
+.cid-qHWBeFg2VL .card_cont {
+  -o-transition: all .5s;
+  -ms-transition: all .5s;
+  -moz-transition: all .5s;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #0b5181;
-  background: linear-gradient(to left, #0b5181, #154c81) !important;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
+  top: 0px;
+  left: 0px;
+  text-align: center;
+  background-color: #eee;
 }
-.cid-qHhDBHlQ1W .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-qHhDBHlQ1W .mbr-gallery-item > div:hover:before {
-  opacity: 0.4 !important;
-}
-.cid-qHhDBHlQ1W .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
+.cid-qHWBeFg2VL .card-front {
   z-index: 2;
-}
-.cid-qHhDBHlQ1W .mbr-gallery-title:before {
-  content: " ";
+  padding: 0;
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #0b5181 !important;
-  background: linear-gradient(to left, #0b5181, #154c81) !important;
-  opacity: 0.4;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
+  overflow: hidden;
 }
-.cid-qHhDBHlQ1W .mbr-gallery-item > div > span {
+.cid-qHWBeFg2VL .card-front img {
+  min-height: 100%;
+  min-width: 100%;
+  width: auto;
+  max-width: 600px;
+}
+.cid-qHWBeFg2VL .card_back {
+  width: 100%;
+  height: 100%;
+  padding: 30px 30px;
+  color: #ffffff;
+  background-color: #154c81;
+  z-index: 1;
+  margin: 0;
+  text-align: center;
+  overflow: hidden;
+  -o-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -webkit-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+}
+.cid-qHWBeFg2VL .card {
+  min-height: 300px;
+}
+.cid-qHWBeFg2VL .card:hover .card-front {
+  z-index: 1;
+  -o-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+.cid-qHWBeFg2VL .card:hover .card_back {
+  z-index: 2;
+  -o-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -webkit-transform: rotateY(0deg);
+  transform: rotateY(0deg);
+}
+.cid-qHWBeFg2VL .builderCard .card_back {
+  border-bottom-left-radius: 100px;
+}
+.cid-qHWBeFg2VL .builderCard .card_cont {
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidd;
+  -moz-backface-visibility: visible;
+  -webkit-backface-visibility: visible;
+  backface-visibility: visible;
+}
+.cid-qHWBeFg2VL .mbr-section-title B {
   color: #154c81;
 }
 .cid-qHivoIL3TZ {
